--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/HospitalReservationSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=F:\\New folder\\NetBeans 8.2\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.derbyclient.jar=D:\\Programing\\netbeans\\jdk\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
