--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.derbyclient.jar=F:\\New folder\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
+user.properties.file=C:\\Users\\river\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
