--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,17 @@ dist.jar=${dist.dir}/HospitalReservationSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=F:\\New folder\\NetBeans 8.2\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derby.jar
 file.reference.derbyclient.jar=D:\\Programing\\netbeans\\jdk\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
